# ATTENTIVELY

./: .gitignore  README.md  render.yaml
.deps/boto3-1.43.21.dist-info/: METADATA  RECORD
.deps/botocore-1.43.21.dist-info/: METADATA  RECORD
.deps/fastapi-0.136.3.dist-info/: RECORD
.deps/httpx-0.28.1.dist-info/: RECORD
.deps/idna-3.18.dist-info/: RECORD
.deps/jmespath-1.1.0.dist-info/: RECORD
.deps/pygments-2.20.0.dist-info/: RECORD
.deps/pytest-9.0.3.dist-info/: RECORD
.deps/python_dotenv-1.2.2.dist-info/: RECORD
.deps/python_multipart-0.0.30.dist-info/: RECORD
.deps/s3transfer-0.18.0.dist-info/: RECORD
.deps/uvicorn-0.48.0.dist-info/: RECORD
android-app/: build.gradle.kts  settings.gradle.kts
android-app.41fe8af9/.artifacts/20260605-130943-e5cb8ee4-2b73-450f-af48-c75d4ea74e30/: implementation_plan.artifact.md  walkthrough.artifact.md
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  db.py  dependencies.py  enums.py  main.py  models.py  schemas.py
backend/app/api/: internal.py  sessions.py
backend/app/services/: jobs.py  providers.py  qstash.py  sessions.py  storage.py  uploads.py
backend/app/services/analysis/: grammar.py  normalizer.py  scorer.py  types.py
backend/app/services/analysis/providers/: __init__.py  base.py  deepgram.py  groq.py
backend/chanting_coach_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_flow.py  test_job_failover.py  test_scorer.py
docs/: DEPLOYMENT.md
(+18 files in other folders)
